--- a/app/assets/stylesheets/global/_footer-main.scss
+++ b/app/assets/stylesheets/global/_footer-main.scss
@@ -67,7 +67,7 @@
 .license-msg,
 .author-msg {
   a {
-    border-bottom: 2px solid lighten($color-blue-dark, 5%);
+    border-bottom: 2px solid darken($color-blue, 10%);
 
     &:hover,
     &:focus {
